--- a/Viewpost.html
+++ b/Viewpost.html
@@ -47,7 +47,7 @@
 
       <div class="container">
           <div class="row">
-              <div class="col-6 col-mb-4">
+              <div class="col-6 col-mb-4 col-sm-12">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -75,7 +75,7 @@
                     </button>
                   </div>
               </div>
-              <div class="col-6 col-mb-4">
+              <div class="col-6 col-mb-4 col-sm-12">
                 <h3 class="display-6 mb-3">Description</h3>
                 <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil nisi ex veniam, repellat earum, voluptatibus odio officiis consequatur, labore non deleniti magnam voluptatum velit. Recusandae nobis expedita rem nihil dolorum!</p>
                 <h3 class="display-6 mb-3">List</h3>
